--- a/Resources/views/Drop/drop.html.twig
+++ b/Resources/views/Drop/drop.html.twig
@@ -129,7 +129,7 @@
 
 {% block javascripts %}
     {{ parent() }}
-
+    <script type="text/javascript" src="{{ asset('bundles/icapdropzone/js/drop.js') }}"></script>
     {% javascripts debug=false  output='vendor/twbs/bootstrap/js/change_me.js'
         '../vendor/twbs/bootstrap/js/modal.js'
     %}<script type="text/javascript" src="{{ asset_url }}"></script>
